Cliente Web de Coaseguro creado.

--- a/WSEmision/Plantillas/Coaseguro/CedulaParticipacionAnexoCondiciones.tex
+++ b/WSEmision/Plantillas/Coaseguro/CedulaParticipacionAnexoCondiciones.tex
@@ -48,7 +48,7 @@
         \end{tabularx}
         \begin{tabularx}{\textwidth}{|>{\columncolor[gray]{0.8}\centering\arraybackslash}X|}
             \hline
-            <POL-ENDO> <TIPO-POLIZA>\\
+            <TIPO-ENDO> <TIPO-POLIZA>\\
             <DESC-RAMO-COMERCIAL>\\
             IDENTIFICADOR DE PÓLIZA: <SUC-COD-RAMO-POLIZA-ENDO-SUF>\\
             \hline
