Agregada información de Fee a Anexo de Condiciones Particulares de Coaseguro. Se toma en cuenta únicamente ENDOSO 0.

--- a/WSEmision/Plantillas/Coaseguro/AnexoCondiciones.tex
+++ b/WSEmision/Plantillas/Coaseguro/AnexoCondiciones.tex
@@ -118,7 +118,15 @@ $\Box$ Prima Neta\\
 
 \textbf{COMISIÓN POR ADMINISTRACIÓN DE COASEGURO}\\
 
-La comisión por administración para la COASEGURADORA LÍDER será de \underline{\hspace{2cm}}\% sobre la participación de cada COASEGURADORA SEGUIDORA.\\
+La comisión por administración para la COASEGURADORA LÍDER será de \underline{\hspace{2cm}}\% sobre la participación de cada COASEGURADORA SEGUIDORA.
+
+\begin{center}
+    \begin{tabularx}{\textwidth}{|X|c|r|}
+        \hline
+        \textbf{Coaseguradora} & \textbf{\% Fee} & \textbf{Monto Fee}\\\hline
+        <TABLA-ANEXO-FEE>
+    \end{tabularx}
+\end{center}
 
 \textbf{SINIESTROS E INDEMNIZACIONES}\\
 
