--- a/WSEmision/Plantillas/Coaseguro/CedulaParticipacionAnexoCondiciones.tex
+++ b/WSEmision/Plantillas/Coaseguro/CedulaParticipacionAnexoCondiciones.tex
@@ -174,6 +174,14 @@ $\Box$ Prima Neta\\
 
 La comisión por administración para la COASEGURADORA LÍDER será de \underline{\hspace{2cm}}\% sobre la participación de cada COASEGURADORA SEGUIDORA.\\
 
+\begin{center}
+    \begin{tabularx}{\textwidth}{|X|c|r|}
+        \hline
+        \textbf{Coaseguradora} & \textbf{\% Fee} & \textbf{Monto Fee}\\\hline
+        <TABLA-ANEXO-FEE>
+    \end{tabularx}
+\end{center}
+
 \textbf{SINIESTROS E INDEMNIZACIONES}\\
 
 Las COASEGURADORAS acuerdan que los ajustes de los siniestros se lleven a cabo a través del panel de ajustadores de la COASEGURADORA LÍDER, asimismo, las indemnizaciones que corresponda a los siniestros proccedentes, será realizado por la COASEGURADORA LÍDER sin la previa autorización de las COASEGURADORAS SEGUIDORAS dentro de los límites siguientes:\\
