Agregada sección de Conceptos por Pago de Comisión al Agente en el Anexo de Condiciones Particulares de Coaseguro.

--- a/WSEmision/Plantillas/Coaseguro/CedulaParticipacionAnexoCondiciones.tex
+++ b/WSEmision/Plantillas/Coaseguro/CedulaParticipacionAnexoCondiciones.tex
@@ -166,9 +166,7 @@ Las COASEGURADORAS acuerdan que la distribución de la participación en el ries
 
 El pago de comisiones incluye los siguientes conceptos:\\
 
-$\Box$ Prima Neta\\
-\indent $\Box$ Recargos por pago fraccionado\\
-\indent $\Box$ Sobre comisión\\
+<CONCEPTOS-PAGO-COMISION-AGENTE>
 
 \textbf{COMISIÓN POR ADMINISTRACIÓN DE COASEGURO}\\
 
